
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1797] Fix bug with publishedby field getting updated unintentionally
- [#MODX-1919], [#XPDO-52] Update xPDO to revision 425 for fix to xPDOManager::createObjectContainer()
- [#MODX-1918], [#MODX-1919] Improve error reporting in database setup steps
- Made default click behavior for Files in file tree be to edit
- [#MODX-1995] Fixed issues regarding sending password via email with new users
- [#MODX-1549] Preserve file tree state
- [#MODX-1810] Gender now saves correctly in user panel
- [#MODX-1635] Redirect to Users grid after creating a new user
- Fixed bug with import properties
- [#MODX-1971] Allow ./- in Context key names, but not as first character
- [#MODX-1997] Added ability to duplicate and set inactive/active Form Customization Rules, batch actions to Rule grid
- Cleaned up profile editing page
- Cleaned up style for headers on welcome page
- Reworked System Info page, cleaned up styling, display, info
- Added batch actions to Users grid
- Fixed bugs with removing directories in file tree
- [#MODX-1996] Fixed missing create/update settings windows
- Allow for separate paths on derivative resource types based on a [classkey]_delegate_path setting that points to their controllers, added checks to prevent path mapping
- Prevent deferred render on left nav trees, to prevent loading errors for js hooks
- Fixed bugs with MODx.grid.encodeModified/encode, plugin event saving
- Added loadCreateMenus JS event to modx-resource-tree modext widget
- Refactored js lang loading to allow for dynamic modification of strings
- [#MODX-1993] Moved config.inc.tpl to core/docs to prevent confusion
- Added description below TV rows in Resource edit