@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added missing OnUserBeforeRemove event
 - [#MODX-1797] Fix bug with publishedby field getting updated unintentionally
 - [#MODX-1919], [#XPDO-52] Update xPDO to revision 425 for fix to xPDOManager::createObjectContainer()
 - [#MODX-1918], [#MODX-1919] Improve error reporting in database setup steps
